--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 This is a basic package for allowing for the creation of TiddlyWeb
 users over a simple HTTP API.
 
-It is experimental and insecure. Do not use this on a public site
-with data that needs to be secure.
-
-This package is licensed under the same terms as TiddlyWeb.
+It is experimental and potentially insecure. Do not use this on a
+public site with data that needs to be secure unless you have 
+reviewed the code and understand the implications.
